--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="w-full 2xl:max-w-7xl mx-auto p-5 flex justify-between items-center">
     <div class="flex flex-wrap items-center justify-between mx-auto p-4 w-full gap-y-5">
         <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/images/{{ site.Params.logo }}" class="h-8" alt="{{ site.Title }} Logo">
+            <img src="{{ .Site.BaseURL }}/images/{{ site.Params.logo }}" class="h-8" alt="{{ site.Title }} Logo">
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <button type="button" class="hidden md:block text-slate-800 bg-lime-200 hover:bg-lime-300 focus:ring-4 focus:outline-none focus:ring-lime-100 font-medium rounded-lg text-sm px-4 py-2 text-center transition-all">Connect Wallet</button>
