--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="w-full 2xl:max-w-7xl mx-auto p-5 flex justify-between items-center">
     <div class="flex flex-wrap items-center justify-between mx-auto p-4 w-full gap-y-5">
-        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="{{ site.BaseURL }}" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="{{ .Site.BaseURL }}/images/{{ site.Params.logo }}" class="h-8" alt="{{ site.Title }} Logo">
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
